# vercel-rust-currency

./: .gitignore  Cargo.toml  build.sh  index.html  package.json  vercel.json
.cargo/: config.toml
api/: convert.js  convert.rs  currencies.js  currencies.rs  currency.rs  index.js
api/edge/: currencies.js
src/: lib.rs
